docs(845): live round — defect 1 verified, defect 2 partial
Ran the scripted live leg end-to-end on this worktree's dist (Qwen3.5-9B
standard, cuda12, thinking ON, docs/explanation corpus).

Premise confirmed live: /api/inference/status reports llmContextTokens 4096 —
the exact accessor the fix reads. The old call sites assumed 8192 and asked for
5990 input tokens out of a 4096-token window.

Defect 1 VERIFIED. The probe's exact Thorough payload (maxTokens 3072,
topK 12) returns 200, not 400. Retrieval found 146 chunks and the budget
admitted 1 — honest degradation, visible in the numbers. context_truncated is
true on that arm and false on the arms that fit, so the OR-ed flag fires
exactly where the trim happened. prompt+completion stayed within 4096 on every
arm (2942 / 3454 / 3657 / 2254).

Defect 2 PARTIAL, reported rather than silently patched. On the probe's
original shape (A5) the false denial is gone — the answer uses the prescribed
coverage framing verbatim and the reasoning shows the model restating the
constraint before complying. But asked directly "can you access my files?"
(A4) the model still denies access despite the instruction. The deployed jar
was confirmed to carry the new prompt and RAGQAStyle is wired into the shape,
so this is behaviour, not a stale build. The corpus here is JustSearch's own
docs, which invites a product-vs-assistant split; whether A4 is wording, corpus
artifact, or out of scope for a prompt fix is not settled by this round, and
re-wording without a probe separating those three would be guessing.

Incidental: Quick + thinking returns an empty answer (reasoning ate all 512
completion tokens) — tempdoc 835's B3 regression reproduced, and independent
empirical confirmation of this slice's arithmetic decision. Logged.

Teardown verified: no survivors, no listening sockets, GPU back to baseline.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>